# libvirt-ocaml

./: .gitignore  .gitlab-ci.yml  .hgignore  CONTRIBUTING.rst  COPYING.LIB  ChangeLog  ChangeLog.old  MANIFEST  Make.rules  Make.rules.in  Makefile.am  Makefile.in  README  TODO.libvirt  config.h.in  configure.ac  gitlog-to-changelog  run.in  wininstaller.nsis.in  winlicense.rtf
.github/: lockdown.yml
.github/workflows/: lockdown.yml
ci/: gitlab.yml  libvirt-centos-7.Dockerfile  libvirt-centos-8.Dockerfile  libvirt-debian-10.Dockerfile  libvirt-debian-9.Dockerfile  libvirt-debian-sid.Dockerfile  libvirt-fedora-31.Dockerfile  libvirt-fedora-32.Dockerfile  libvirt-fedora-rawhide.Dockerfile  libvirt-opensuse-151.Dockerfile  libvirt-ubuntu-1804.Dockerfile  libvirt-ubuntu-2004.Dockerfile  manifest.yml  refresh
ci/buildenv/: alpine-320.sh  centos-stream-8.sh  centos-stream-9.sh  debian-sid.sh  fedora-36.sh  fedora-39.sh  fedora-rawhide.sh  opensuse-leap-15.sh  opensuse-leap-153.sh  opensuse-tumbleweed.sh  ubuntu-2004.sh
ci/containers/: alpine-320.Dockerfile  alpine-edge.Dockerfile  centos-8.Dockerfile  centos-stream-8.Dockerfile  centos-stream-9.Dockerfile  ci-centos-7.Dockerfile  ci-centos-8.Dockerfile  ci-centos-stream.Dockerfile  ci-debian-10.Dockerfile  ci-debian-sid.Dockerfile  ci-fedora-32.Dockerfile  ci-fedora-33.Dockerfile  ci-fedora-rawhide.Dockerfile  ci-opensuse-151.Dockerfile  ci-opensuse-152.Dockerfile  ci-ubuntu-1804.Dockerfile  ci-ubuntu-2004.Dockerfile  debian-10.Dockerfile  debian-12.Dockerfile  debian-sid.Dockerfile  fedora-33.Dockerfile  fedora-34.Dockerfile  fedora-35.Dockerfile  fedora-36.Dockerfile  fedora-37.Dockerfile  fedora-39.Dockerfile  fedora-40.Dockerfile  fedora-rawhide.Dockerfile  libvirt-centos-7.Dockerfile  libvirt-centos-8.Dockerfile  libvirt-centos-stream.Dockerfile  libvirt-debian-10.Dockerfile  libvirt-debian-sid.Dockerfile  libvirt-fedora-31.Dockerfile  libvirt-fedora-32.Dockerfile  libvirt-fedora-33.Dockerfile  libvirt-fedora-rawhide.Dockerfile  libvirt-opensuse-151.Dockerfile  libvirt-ubuntu-1804.Dockerfile  libvirt-ubuntu-2004.Dockerfile  (+9 more)
ci/gitlab/: build-templates.yml  builds.yml  containers.yml
ci/lcitool/projects/: libvirt-ocaml.yml
examples/: .depend  Makefile.am  Makefile.in  domain_events.ml  get_all_domain_stats.ml  get_cpu_stats.ml  list_domains.ml  list_secrets.ml  node_info.ml
libvirt/: .depend  META_libvirt_in  Makefile.am  Makefile.in  README  generator.pl  libvirt.ml  libvirt.mli  libvirt_c.c  libvirt_c.h  libvirt_c_common.c  libvirt_c_epilogue.c  libvirt_c_oneoffs.c  libvirt_c_prologue.c  libvirt_version.ml.in  libvirt_version.mli
libvirt/local/: META_libvirt_in
mlvirsh/: .depend  Makefile.in  mlvirsh.ml
po/: LINGUAS  Makefile.in  POTFILES  ja.po  pl.po  pt_BR.po  virt-top.pot
web/: .index.html.swp  index.html
web/css/: easytoread.css  numbering.css  standard.css
